preset: Fix search-page margins in Library List
The were  no  margins at all in this page, so the
cards were overlapping with the navigation button
and looked  very  different from other pages with
similar arrangements and cards.

https://phabricator.endlessm.com/T22162

--- a/data/css/library_list.scss
+++ b/data/css/library_list.scss
@@ -90,6 +90,10 @@
     font-weight: 900;
     padding: 1.0em 1.0em 0.50em 1.0em;
   }
+
+  .ArrangementSquareGuys {
+      margin: 0px 60px 60px;
+  }
 }
 
 .composite {
